# dinner-murder-mystery

./: README.md
client/: index.html  package-lock.json  package.json
server/: Requirements.md  justfile  main.py  pyproject.toml
server/db/: __init__.py  database.py  models.py
server/factory/: story.py
server/models/: __init__.py  conversation.py  entity.py  game_state.py  guest.py  request.py  response.py  story.py
server/routes/: __init__.py  auth.py  question.py  search.py  websocket.py
server/services/: __init__.py  auth_service.py  game_engine.py  question_service.py  search_service.py  websocket_service.py
server/settings/: env.py
